# TestMind

./: .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  PUBLISH.md  README.md  pyproject.toml
.opencode/: opencode.json  package-lock.json
.opencode/agents/: core-agent.md  models-agent.md  skills-agent.md  testmind.md  tools-api-agent.md  tools-spec-agent.md
templates/: env.json.j2  project.json.j2
templates/claude/: settings.json.j2
templates/claude/skills/: app-explorer.md.j2  case-generator.md.j2  case-runner.md.j2  requirement-analyst.md.j2  result-analyst.md.j2  testmind.md.j2
templates/cursor/: .cursorrules.j2
templates/opencode/: opencode.jsonc.j2
templates/opencode/skills/app-explorer/: SKILL.md.j2
templates/opencode/skills/case-generator/: SKILL.md.j2
templates/opencode/skills/case-runner/: SKILL.md.j2
templates/opencode/skills/requirement-analyst/: SKILL.md.j2
templates/opencode/skills/result-analyst/: SKILL.md.j2
templates/opencode/skills/testmind/: SKILL.md.j2
testmind/: __init__.py  cli.py  server.py
testmind/config/: __init__.py  schema.py  settings.py
testmind/core/: __init__.py  analyze.py  assertion.py  hooks.py  perf.py  project_init.py  report.py  requirements_saver.py  runner.py  security.py  spec_fetcher.py  spec_parser.py  variable.py  web_driver.py
testmind/models/: __init__.py  project.py  result.py  suite.py  testcase.py
testmind/tools/: __init__.py  discover_spec.py  fetch_url.py  get_results.py  list_cases.py  parse_spec.py  project_tools.py  run_cases.py  save_case.py  save_requirements.py  save_spec.py  validate_case.py  web_tools.py
testmind/utils/: crypto.py  logger.py
tests/: test_e2e.py
tests/test_core/: test_analyze.py  test_case_management.py  test_concurrent.py  test_core_supplement.py  test_perf.py  test_report.py  test_runner.py  test_security.py  test_suite.py
tests/test_models/: test_result.py  test_testcase.py
tests/test_tools/: conftest.py  test_discover_spec.py  test_fetch_url.py  test_get_results.py  test_list_cases.py  test_parse_spec_tool.py  test_project_tools.py  test_run_cases.py  test_save_case.py  test_save_requirements.py  test_save_spec.py  test_validate_case.py  test_web_tools.py
tests/test_utils/: test_crypto.py
