[project]
name = "testmind-ai"
version = "0.5.0"
description = "Open-source intelligent testing AI platform — MCP Server + Agent hybrid architecture. Generate, execute, and analyze API/Web/Mobile tests with AI-powered tooling."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TestMind Team", email = "xub3306@gmail.com"}
]
keywords = ["testing", "ai", "mcp", "api-testing", "automation", "llm", "openapi", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0",
    "click>=8.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "jsonpath-ng>=1.6",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/xub3306/TestMind"
Repository = "https://github.com/xub3306/TestMind.git"
Issues = "https://github.com/xub3306/TestMind/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
crypto = [
    "cryptography>=42.0",
]
web = [
    "playwright>=1.40",
]

[project.scripts]
testmind = "testmind.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["testmind"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "templates"

[tool.hatch.build.targets.sdist]
include = [
    "/testmind",
    "/templates",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"